--- a/client/src/assets/css/footer.css
+++ b/client/src/assets/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: #f7f6fe;
+  background: #e6e3fa;
   border-radius: 20px;
   margin: 32px auto 0 auto;
   padding: 36px 0 18px 0;
