--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -124,3 +124,21 @@
 .logout-btn:hover {
   background: #fee2e2;
 }
+
+
+
+.create-event-btn{
+  background: #6c63ff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-right: 30px;
+}
