--- a/client/src/assets/css/login.css
+++ b/client/src/assets/css/login.css
@@ -84,7 +84,7 @@
   margin-left: 4px;
 }
 
-.login-btn-login {
+.loginpage-btn-login {
   text-align: center;
   background: #6c63ff;
   color: #fff;
